infrastructure/k8s/hashicorp_vault/vault.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  serviceName: vault
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault
          imagePullPolicy: "IfNotPresent"
          command: ["vault", "server", "-config", "/vault/config.d/config.hcl"]
          ports:
            - containerPort: 8200
          volumeMounts:
            - name: vault-config
              mountPath: /vault/config.d
            - name: vault-tls
              mountPath: /etc/certs
            - mountPath: /vault/file
              name: vault-volume-claim
              subPath: file
      volumes:
        - name: vault-config
          configMap:
            name: vault-config
        - name: vault-tls
          secret:
            secretName: vault-tls
  volumeClaimTemplates:
    - metadata:
        name: vault-volume-claim
        labels:
          app: vault
      spec:
        storageClassName: local-storage
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  selector:
    app: vault
  ports:
  - protocol: TCP
    port: 443
    targetPort: 8200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vault
  name: vault
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "vault.santelos.com"
    secretName: vault-santelos-cert
  rules:
  - host: vault.santelos.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 443
